<resources>
    <string name="app_name">Gym System</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>

    <string name="select">Genero</string>


    <string name="menu_panel">Panel de Control</string>
    <string name="menu_registro">Nuevo Registro</string>
    <string name="menu_pago">Pago</string>
    <string name="menu_miembros">Miembros</string>
    <string name="menu_estadoSalud">Estado de Salud</string>
    <string name="menu_membresias">Membresias</string>
    <string name="menu_planNutricional">Plan Nutricional</string>
    <string name="menu_perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>